# wasm-imasiengine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CNAME  README.md  appveyor.yml  build-asmjs.bat  build-clang.bat  build-gcc.bat  docker-compose.yml
ci/: appveyor.yml  travis-default.sh  travis-emscripten.sh  travis.yml
demo/: Game.html  Game.js  Game.js.mem  Game.wasm
docker/: emscripten-build.sh
modules/: AddSubdirectoryWithFolder.cmake  FindSDL2.cmake  FindSDL2main.cmake
projects/: CMakeLists.txt
projects/calculator/: CMakeLists.txt
projects/calculator/include/: Calculator.hpp
projects/calculator/src/: Calculator.cpp
projects/calculator/tests/: CMakeLists.txt
projects/calculator/tests/src/: CalculatorTests.cpp
projects/ecs/: CMakeLists.txt
projects/game/: CMakeLists.txt
projects/game/assets/: Game.html
projects/game/src/: BouncingBalls.cpp  BouncingBalls.hpp  GameContext.hpp  main.cpp
projects/game/src/Components/: PhysicsComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
projects/game/src/Systems/: CollisionSystem.hpp  PhysicsSystem.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.hpp
projects/greeter/: CMakeLists.txt
projects/greeter/include/: Greeter.hpp
projects/greeter/src/: Greeter.cpp
projects/greeter/tests/: CMakeLists.txt
projects/greeter/tests/src/: GreeterTests.cpp
projects/guasem/: CMakeLists.txt
projects/helloworld/: CMakeLists.txt
projects/helloworld/src/: main.cpp
toolchains/: emscripten-wasm.cmake  emscripten.cmake
toolchains/generic/: Emscripten-wasm.cmake  Emscripten.cmake
